--- a/.drone.yml
+++ b/.drone.yml
@@ -28,6 +28,7 @@ steps:
       TRIVY_TIMEOUT: 1m
       TRIVY_FORMAT: json
       TRIVY_SKIP_FILES: /usr/local/bin/gomplate
+      TRIVY_SKIP_DIRS: /pretalx/src/pretalx/frontend/schedule-editor/node_modules
     depends_on:
       - security-build
 
